allow multiple Domain and Enrich actions of the same type to be configured if they do not operate on the same domain